flyte-sandbox/upstream/ingress-minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: minio
  namespace: flyte
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: minio
                port:
                  number: 9001
            path: /minio
            pathType: ImplementationSpecific
